tests/ui/parser/item-free-const-no-body-semantic-fail.stderr
error: free constant item without body
  --> $DIR/item-free-const-no-body-semantic-fail.rs:5:1
   |
LL | const A: u8;
   | ^^^^^^^^^^^-
   |            |
   |            help: provide a definition for the constant: `= <expr>;`

error: free constant item without body
  --> $DIR/item-free-const-no-body-semantic-fail.rs:6:1
   |
LL | const B;
   | ^^^^^^^-
   |        |
   |        help: provide a definition for the constant: `= <expr>;`

error[E0658]: omitting type on const item declaration is experimental
  --> $DIR/item-free-const-no-body-semantic-fail.rs:6:8
   |
LL | const B;
   |        ^
   |
   = note: see issue #149226 <https://github.com/rust-lang/rust/issues/149226> for more information
   = help: add `#![feature(const_items_unit_type_default)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider specifying the type explicitly

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
